alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@
 
 html {
     height: 100%;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
 }
 
 body {
@@ -39,8 +42,9 @@ body {
     font-size: 15px;
     font-family: "Poppins", sans-serif;
     height: 100%;
-    overflow-x: hidden;
     background-color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
 html,
@@ -1091,8 +1095,8 @@ position: relative;
     }
 
     .bible-verse{
-        margin-left: 76px;
-        margin-right: 76px;
+        margin-left: 63px;
+        margin-right: 37px;
         margin-top: 10px;
     }
 }
@@ -1103,17 +1107,18 @@ iframe div {
 
 .hero {
     width: 100%;
-    height: 20%;
+    height: auto;
     background: #fff;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-top: 30px;
+    margin: 30px 0;
   }
   
   .social-links {
     display: flex;
+    justify-content: center;
     width: 100%;
   }
   
@@ -1359,7 +1364,7 @@ cite {
     padding: 0;
     margin: 0;
     color: var(--bg-blue);
-    margin-right: 20px;
+    margin-right: 5px;
     text-align: center;
     width: 20px;
 }
